# learn-fastmcp

./: .env.example  .gitignore  README.md  TRANSPORT_CONFIG.md  pyproject.toml
.dev-resources/docs/: README.md  RESEARCH-SUMMARY.md  curl-command-patterns.md  fastmcp-http-api-reference.md
.devcontainer/: devcontainer.json
scripts/: client_http_streamable.py
src/learn_fastmcp/: config.py  main.py
tests/: __init__.py  test_config.py
